Refactor user management and registration forms to include email field, enhance password validation, and implement admin user functionalities. Updated templates for improved user experience and added Google authentication error handling.

--- a/mycookbook/templates/change_password.html
+++ b/mycookbook/templates/change_password.html
@@ -8,67 +8,93 @@
         alt="My CookBook Logo"
       />
     </a>
-    <h1 class="secondary-heading heading-black uppercase">Change password</h1>
+    {% if password_needs_set %}
+    <h1 class="secondary-heading heading-black uppercase">Set Your Password</h1>
+    <p>Set a password for your account for future logins.</p>
+    {% else %}
+    <h1 class="secondary-heading heading-black uppercase">Change Password</h1>
+    {% endif %}
+
     <div class="row">
       <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <!--Old password-->
+        {{ form.hidden_tag() }} {% if not password_needs_set %}
         <div class="row">
           <div class="input-field col s12">
-            <i class="material-icons prefix">lock</i>
-            {{ form.old_password.label }}
-            {{ form.old_password(placeholder="Enter current password") }}
-            {% for error in form.old_password.errors %}
-            <small class="text-red">{{ error }}</small>
-            {% endfor %}
+            <i class="material-icons prefix">lock_outline</i> {{
+            form.old_password.label(class="active") }} {{
+            form.old_password(placeholder="Enter current password",
+            required=True) }} {# Add required attribute visually #} {% if
+            form.old_password.errors %} {% for error in form.old_password.errors
+            %} <small class="text-red helper-text">{{ error }}</small> {# Use
+            helper-text class #} {% endfor %} {% endif %} {% with messages =
+            get_flashed_messages(category_filter=["danger"]) %} {% if messages
+            %} {% for message in messages %} {% if 'Incorrect current password'
+            in message %}
+            <small class="text-red helper-text">{{ message }}</small>
+            {% endif %} {% if 'Current password is required' in message %}
+            <small class="text-red helper-text">{{ message }}</small>
+            {% endif %} {% endfor %} {% endif %} {% endwith %}
           </div>
         </div>
-        <!--New password-->
+        {% endif %}
+
         <div class="row">
           <div class="input-field col s12">
-            <i class="material-icons prefix">vpn_key</i>
-            {{ form.new_password(placeholder="Enter new password", id="new_password") }}
-            <label for="new_password">New Password <i class="fas fa-question-circle tooltipped" data-position="top" data-tooltip="3-15 characters, case sensitive"></i></label>
-            {% for error in form.new_password.errors %}
-            <small class="text-red">{{ error }}</small>
-            {% endfor %}
+            <i class="material-icons prefix">lock</i> {{
+            form.new_password(placeholder="Enter new password",
+            id="new_password", required=True) }}
+            <label for="new_password"
+              >New Password
+              <i
+                class="fas fa-question-circle tooltipped"
+                data-position="top"
+                data-tooltip="3-15 characters, case sensitive"
+              ></i
+            ></label>
+            {% if form.new_password.errors %} {% for error in
+            form.new_password.errors %}
+            <small class="text-red helper-text">{{ error }}</small>
+            {% endfor %} {% endif %}
           </div>
         </div>
-        <!--New password-->
         <div class="row">
           <div class="input-field col s12">
-            <i class="material-icons prefix">vpn_key</i>
-            {{ form.confirm_new_password.label }} 
-            {{ form.confirm_new_password(placeholder="Confirm new password") }} 
-            {% for error in form.confirm_new_password.errors %}
-            <small class="text-red">{{ error }}</small>
-            {% endfor %}
+            <i class="material-icons prefix">check</i> {# {{
+            form.confirm_new_password.label }} #} {# Label might be redundant
+            with placeholder #} {{
+            form.confirm_new_password(placeholder="Confirm new password",
+            required=True) }} {% if form.confirm_new_password.errors %} {% for
+            error in form.confirm_new_password.errors %}
+            <small class="text-red helper-text">{{ error }}</small>
+            {% endfor %} {% endif %} {% with messages =
+            get_flashed_messages(category_filter=["danger"]) %} {% if messages
+            %} {% for message in messages %} {% if 'New passwords do not match'
+            in message %}
+            <small class="text-red helper-text">{{ message }}</small>
+            {% endif %} {% endfor %} {% endif %} {% endwith %}
           </div>
         </div>
-          <!--Flash messages-->
-          <div class="row center-align">
-          {% with messages = get_flashed_messages() %} 
-              {% if messages %} 
-                  {% for message in messages %}
-                      <small class="text-red">
-                      {{ message }}
-                      </small>
-                  {% endfor %} 
-              {% endif %} 
-          {% endwith %}
-          </div>
-        <!--Button-->
-        <div class="col s6 right-align margin-bottom-large">
-          <a
-            href="{{ url_for('account_settings', username = session.username) }}"
-            class="btn z-depth-2 btn-change btn-form btn-secondary waves-effect waves-light uppercase"
-            name="action"
-          >
-            Cancel
-          </a>
+        <div class="row center-align">
+          {% with messages = get_flashed_messages(category_filter=["success",
+          "info", "warning"]) %} {% if messages %} {% for message in messages %}
+          <small class="text-green">{{ message }}</small> {# Use appropriate
+          color #} {% endfor %} {% endif %} {% endwith %}
         </div>
-        <div class="col s6 left-align margin-bottom-large">
-          {{ form.submit(class="btn z-depth-3 btn-change btn-form btn-coral-2 uppercase")}}
+        <div class="row">
+          {# Wrap buttons in a row for better alignment #}
+          <div class="col s6 right-align margin-bottom-large">
+            <a
+              href="{{ url_for('account_settings', username = session.username) }}"
+              class="btn z-depth-2 btn-change btn-form btn-secondary waves-effect waves-light uppercase"
+              name="action"
+            >
+              Cancel
+            </a>
+          </div>
+          <div class="col s6 left-align margin-bottom-large">
+            {{ form.submit(class="btn z-depth-3 btn-change btn-form btn-coral-2
+            uppercase")}}
+          </div>
         </div>
       </form>
     </div>
